--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -2,4 +2,4 @@
 
 <h1>New Service</h1>
 
-<%= render "form", service: @service, type_options: @type_options, provider_options: @provider_options %>
+<%= render "form", service: @service, type_options: @type_options, provider_options: @provider_options, doctors: @doctors %>
