--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -1,4 +1,4 @@
-$sizes: ("xs": 0.5rem, "sm": 1rem, "md": 1.5rem, "lg": 2rem, "xl": 2.5rem, "xxl": 3rem);
+$sizes: ("xxs": 0.5rem, "xs": 0.75rem, "sm": 1rem, "md": 1.5rem, "lg": 2rem, "xl": 2.5rem, "xxl": 3rem);
 $colors: (
   "white": #fefefe,
   "black": #0a0a0a,
@@ -21,10 +21,14 @@ $colors: (
 
 @each $name, $color in $colors {
   .icon-#{$name} {
-    fill: $color;
+    fill: $color!important;
   }
 
   .color-#{$name} {
-    color: $color;
+    color: $color!important;
+  }
+
+  .fill-#{$name} {
+    background-color: $color!important;
   }
 }
