--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,47 +1,5 @@
 <% @title = "Home" %>
-<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
-  <div class="orbit-wrapper">
-    <div class="orbit-controls">
-      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span><%= load_svg('caret-left', 'icon-sm icon-white', 'Previous') %></button>
-      <button class="orbit-next"><span class="show-for-sr">Next Slide</span><%= load_svg('caret-right', 'icon-sm icon-white', 'Next') %></button>
-    </div>
-    <ul class="orbit-container">
-      <li class="is-active orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/999?text=Slide-1" alt="Space">
-          <figcaption class="orbit-caption">One.</figcaption>
-        </figure>
-      </li>
-      <li class="orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/888?text=Slide-2" alt="Space">
-          <figcaption class="orbit-caption">Two.</figcaption>
-        </figure>
-      </li>
-      <li class="orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/777?text=Slide-3" alt="Space">
-          <figcaption class="orbit-caption">Three.</figcaption>
-        </figure>
-      </li>
-      <li class="orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/666&text=Slide-4" alt="Space">
-          <figcaption class="orbit-caption">Four.</figcaption>
-        </figure>
-      </li>
-    </ul>
-  </div>
-  <nav class="orbit-bullets">
-    <button class="is-active" data-slide="0">
-      <span class="show-for-sr">First slide details.</span>
-      <span class="show-for-sr" data-slide-active-label>Current Slide</span>
-    </button>
-    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-    <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-    <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-  </nav>
-</div>
+<%= render 'mainslider' %>
   <h1 class="text-center">Welcome to DocLine!</h1>
   <p>We are focused on improving access to professional doctors by providing medical services through video calls on devices (i.e. phones, computers, tablets, etc.) so individuals no longer have to meet with a doctor in person. Our operators skillful,
     attentive and aptly trained to handle any client scenario.
