--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -18,3 +18,11 @@
     </div>
   </div>
 </div>
+
+<% if session[:siteadmin] %>
+<div class="callout">
+  <h5>Admin Options</h5>
+  <%= link_to "Edit", edit_provider_path(@provider), class: "button secondary margin-0 rounded" %>
+  <%= link_to "Delete", provider_path(@provider), class: "button alert margin-0 rounded", method: "delete" %>
+</div>
+<% end %>
