fixed admin tools styling

--- a/app/views/providers/_view.html.erb
+++ b/app/views/providers/_view.html.erb
@@ -6,11 +6,9 @@
     </small>
   </div>
   <div class="card-section">
-    <p>Description:
+    <h4>Description</h4>
+    <p>
       <%= provider.description %>
-    </p>
-    <p>Name:
-      <%= provider.name %>
     </p>
     <p>Website:
       <%= link_to provider.website, provider.website %>
