--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -24,8 +24,8 @@
               <% end %>
             </div>
             <% if session[:siteadmin] %>
-            <div class="card-section">
-              <h5>Admin Options</h5>
+            <div class="card-section fill-warning">
+              <h5>Admin Tools</h5>
               <%= link_to "Edit", edit_doctor_path(doctor), class: "button secondary margin-0 rounded" %>
               <%= link_to "Delete", doctor_path(doctor), class: "button alert margin-0 rounded", method: "delete" %>
             </div>
