--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -21,8 +21,8 @@
 </div>
 
 <% if session[:siteadmin] %>
-<div class="callout">
-  <h5>Admin Options</h5>
+<div class="callout fill-warning">
+  <h5>Admin Tools</h5>
   <%= link_to "Edit", edit_doctor_path(@doctor), class: "button secondary margin-0 rounded" %>
   <%= link_to "Delete", doctor_path(@doctor), class: "button alert margin-0 rounded", method: "delete" %>
 </div>
