--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -37,8 +37,8 @@
               </div>
             </div>
             <% if session[:siteadmin] %>
-            <div class="card-section">
-              <h5>Admin Options</h5>
+            <div class="card-section fill-warning">
+              <h5>Admin Tools</h5>
               <%= link_to "Edit", edit_provider_path(provider), class: "button secondary margin-0 rounded" %>
               <%= link_to "Delete", provider_path(provider), class: "button alert margin-0 rounded", method: "delete" %>
             </div>
