noted on the provider for that website can be left blank

--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -46,6 +46,7 @@
       <p><%= error %></p>
     </div>
   <% end %>
+  <p class="help-text">Can be left blank</p>
 
   <%= form.submit "Save", class: "button" %>
 
