Cleaned up wording, added placeholders for fields, changed error styling, updated models to catch linking errors, added TSA page. finished Join Provider page

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -55,7 +55,7 @@
   <% if @appointments.length == 0 %>
     <div class="callout warning">
       <p>No appoinments found.</p>
-      <small><%= link_to "Didn't find what you're looking for?", "#", data: { toggle: "search-help" } %></small><br>
+      <small><%= link_to "Didn't find what you're looking for?", "#/", data: { toggle: "search-help" } %></small><br>
       <small id="search-help" class="hide" data-toggler=".hide">Check your spelling, and Date of Birth. If that doesn't fix it, please
         <%= link_to "contact us", contact_path %></small>
     </div>
