--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -1,5 +1,11 @@
 <% @title = "403 Forbidden" %>
 
-<h1>403 - Forbidden</h1>
-<p>You do not have access to this page</p>
-<p>Contact an administrator to gain access</p>
+  <div class="card">
+    <div class="callout alert text-center">
+      <h1>403 Forbidden</h1>
+    </div>
+    <div class="card-section">
+      <p>You do not have access to this page</p>
+      <p>Contact an administrator to gain access</p>
+    </div>
+  </div>
