--- a/app/views/errors/invalidrequest.html.erb
+++ b/app/views/errors/invalidrequest.html.erb
@@ -1,4 +1,9 @@
 <% @title = "400 Invalid" %>
-
-<h1>400 - Invalid Request</h1>
-<p>The server couldn't understand your request</p>
+  <div class="card">
+    <div class="callout alert text-center">
+      <h1>400 Invalid Request</h1>
+    </div>
+    <div class="card-section">
+      <p>The server couldn't understand your request</p>
+    </div>
+  </div>
