--- a/app/views/errors/notfound.html.erb
+++ b/app/views/errors/notfound.html.erb
@@ -1,6 +1,12 @@
 <% @title = "404 Not Found" %>
 
-<h1>404 - Not Found</h1>
-<p>The page could not be found</p>
-<p>Check the URL and try again</p>
-<p>If you were brought here by another link on this site, please contact the administrator</p>
+<div class="card">
+  <div class="callout alert text-center">
+    <h1>404 Not Found</h1>
+  </div>
+  <div class="card-section">
+    <p>The page could not be found</p>
+    <p>Check the URL and try again</p>
+    <p>If you were brought here by another link on this site, please contact the administrator</p>
+  </div>
+</div>
