--- a/app/views/errors/server.html.erb
+++ b/app/views/errors/server.html.erb
@@ -1,6 +1,12 @@
 <% @title = "500 Server Error" %>
 
-<h1>500 - Server Error</h1>
-<p>An unknown error occured</p>
-<p>The server was unable to process your request</p>
-<p>Please try again later</p>
+<div class="card">
+  <div class="callout alert text-center">
+    <h1>500 Server Error</h1>
+  </div>
+  <div class="card-section">
+    <p>An unknown error occured</p>
+    <p>The server was unable to process your request</p>
+    <p>Please try again later</p>
+  </div>
+</div>
