--- a/app/views/errors/unauthorized.html.erb
+++ b/app/views/errors/unauthorized.html.erb
@@ -1,5 +1,11 @@
 <% @title = "401 Unauthorized" %>
 
-<h1>401 - Unauthorized</h1>
-<p>You don't have access to this page</p>
-<p>Please authenticated and try again</p>
+<div class="card">
+  <div class="callout alert text-center">
+    <h1>401 Unauthorized</h1>
+  </div>
+  <div class="card-section">
+    <p>You don't have access to this page</p>
+    <p>Please authenticate and try again</p>
+  </div>
+</div>
