--- a/app/views/errors/unnacceptable.html.erb
+++ b/app/views/errors/unnacceptable.html.erb
@@ -1,6 +1,12 @@
 <% @title = "422 Unnacceptable" %>
 
-<h1>422 - Unnacceptable</h1>
-<p>The server understood, but could not fulfill your request</p>
-<p>This likely means that you do not have permission to perform the requested action</p>
-<p>If you landed here by editing a database field, that field is restricted</p>
+<div class="card">
+  <div class="callout alert text-center">
+    <h1>422 Unnacceptable</h1>
+  </div>
+  <div class="card-section">
+    <p>The server understood, but could not fulfill your request</p>
+    <p>This likely means that you do not have permission to perform the requested action</p>
+    <p>If you landed here by editing a database field, that field is restricted</p>
+  </div>
+</div>
