--- a/app/views/more/_faq.html.erb
+++ b/app/views/more/_faq.html.erb
@@ -8,7 +8,7 @@
 <p class="help-text">Please note that during peak times our staff could take up to 72 hours to process your request.</p>
 
 <h4>Do you accept my insurance?</h4>
-<p>Yes! We accept most insurances please check with your selected provider to see if you are eligible.</p>
+<p>Yes! We accept most insurances, but please check with your selected provider to see if you are eligible.</p>
 
 
 <% if not defined?(aboutus) %>
