--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Edit Service: #{@service.id} #{@service.name}" %>
+<% @title = "Edit Service: #{@service.id} - #{@service.name}" %>
 
 <h1>Edit Service</h1>
 
