--- a/app/views/more/tsa.html.erb
+++ b/app/views/more/tsa.html.erb
@@ -1,2 +1,68 @@
-<h1>More#tsa</h1>
-<p>Find me in app/views/more/tsa.html.erb</p>
+<% @title = "TSA Chapter" %>
+
+  <h1>TSA Chapter</h1>
+
+  <div class="grid-x grid-margin-x">
+    <div class="cell large-8">
+      <h3>Why TSA</h3>
+      <p>Technology Student Association or better known as TSA offers engineering and technology students around the country the opportunity to show their potential. Many prospects around the country do not have the opportunity to show full potential at
+        school or around the community, so TSA which is one of the greatest communities for people offers that opportunity with a wonderful and open community that has been around since 1978. The goal of TSA is to prepare you for the future of technology and
+        the community truly shows that with the popular motto of, "Learning to Lead in a Technical World".</p>
+    </div>
+    <div class="cell large-4">
+      <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit="data-orbit" data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+        <div class="orbit-wrapper">
+          <div class="orbit-controls">
+            <button class="orbit-previous">
+              <span class="show-for-sr">Previous Slide</span><%= load_svg('caret-left', 'icon-sm icon-white', 'Previous') %></button>
+            <button class="orbit-next">
+              <span class="show-for-sr">Next Slide</span><%= load_svg('caret-right', 'icon-sm icon-white', 'Next') %></button>
+          </div>
+          <ul class="orbit-container">
+            <li class="is-active orbit-slide">
+              <%= image_tag "tsa-1", class: "orbit-image", alt: "TSA 1" %>
+            </li>
+            <li class="orbit-slide">
+              <%= image_tag "tsa-2", class: "orbit-image", alt: "TSA 2" %>
+            </li>
+            <li class="orbit-slide">
+              <%= image_tag "tsa-3", class: "orbit-image", alt: "TSA 3" %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="cell large-8">
+      <h3>Our Competitions</h3>
+      <p>TSA offers a variety of competitions for everyone involved in the STEM field. It has programs for computer science, biotechnology, engineering, and anything that is math and science related. The competitions start off on a state level and based on
+        the results of the teams you will be able to move on to a national level where the place of competition changes every year. It is important to remember that not every competition is available at the state level and deadlines are crucial.</p>
+    </div>
+    <div class="cell large-4">
+      <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit="data-orbit" data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+        <div class="orbit-wrapper">
+          <div class="orbit-controls">
+            <button class="orbit-previous">
+              <span class="show-for-sr">Previous Slide</span><%= load_svg('caret-left', 'icon-sm icon-white', 'Previous') %></button>
+            <button class="orbit-next">
+              <span class="show-for-sr">Next Slide</span><%= load_svg('caret-right', 'icon-sm icon-white', 'Next') %></button>
+          </div>
+          <ul class="orbit-container">
+            <li class="is-active orbit-slide">
+              <%= image_tag "tsacomp-1", class: "orbit-image", alt: "Competition 1" %>
+            </li>
+            <li class="orbit-slide">
+              <%= image_tag "tsacomp-2", class: "orbit-image", alt: "Competition 2" %>
+            </li>
+            <li class="orbit-slide">
+              <%= image_tag "tsacomp-3", class: "orbit-image", alt: "Competition 3" %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="cell">
+      <h3>Community Service Projects and Awards</h3>
+      <p>The TSA community has a great community service program and helps the community whenever they can. A popular community service event that TSA is involved in would be Relay for Life and other ACS sponsored events. When chapters participate in these
+        events they awards based on how they did. Awards breakup ranked low to high go: Silver Award, Gold Award, and Purple Award. There is also an award based on team spirit which TSA gives each year. This reward is based on enthusiasm and team spirit.</p>
+    </div>
+  </div>
