--- a/app/views/providers/edit.html.erb
+++ b/app/views/providers/edit.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Edit Provider: #{@provider.id} #{@provider.name}" %>
+<% @title = "Edit Provider: #{@provider.id} - #{@provider.name}" %>
 
 <h1>Edit Provider</h1>
 
