--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,23 +1,6 @@
-<% @title = "Providers: #{@provider.name}" %>
+<% @title = "Provider: #{@provider.name}" %>
 
-<h1><%= @provider.name %></h1>
-
-<%= link_to "Show Details", "#", { data: { toggle: "provider-details" }} %>
-<div id="provider-details" class="hide" data-toggler=".hide" style="margin-top: 1rem;">
-  <div class="grid-x grid-margin-x grid-padding-x">
-    <div class="cell medium-6">
-      <p>Name: <%= @provider.name %></p>
-      <p>Website: <%= @provider.website %></p>
-    </div>
-    <div class="cell medium-6">
-      <p>Phone: <%= @provider.phone %></p>
-      <p>Email: <%= @provider.email %></p>
-    </div>
-    <div class="cell">
-      <p>Description: <%= @provider.description %></p>
-    </div>
-  </div>
-</div>
+<%= render 'view', provider: @provider %>
 
 <% if session[:siteadmin] %>
 <div class="callout fill-warning">
