set assets to compile in production

--- a/app/views/more/cte.html.erb
+++ b/app/views/more/cte.html.erb
@@ -1,2 +1,3 @@
-<h1>More#cte</h1>
-<p>Find me in app/views/more/cte.html.erb</p>
+<% @title = "Computer Science, Technology, and Engineering" %>
+
+<h1>Our Pathway Programs</h1>
